--- a/Gym/Gym/Gym.csproj
+++ b/Gym/Gym/Gym.csproj
@@ -193,6 +193,14 @@
     <Compile Include="Migrations\201712281218167_sweqa.Designer.cs">
       <DependentUpon>201712281218167_sweqa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801021027113_bhanu.cs" />
+    <Compile Include="Migrations\201801021027113_bhanu.Designer.cs">
+      <DependentUpon>201801021027113_bhanu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801021225084_qwer.cs" />
+    <Compile Include="Migrations\201801021225084_qwer.Designer.cs">
+      <DependentUpon>201801021225084_qwer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\GymClass.cs" />
@@ -287,6 +295,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712281218167_sweqa.resx">
       <DependentUpon>201712281218167_sweqa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801021027113_bhanu.resx">
+      <DependentUpon>201801021027113_bhanu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801021225084_qwer.resx">
+      <DependentUpon>201801021225084_qwer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
